# ws63-guide

./: .gitignore  .markdownlint.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  index.rst  pyproject.toml
.github/workflows/: docs.yml
source/: appendix.md  ch1_overview.md  ch2_system.md  ch3_qspi.md  ch4_wifi.md  ch5_security.md  ch6_peripherals.md  ch7_jtag.md  ch8_internals.md  conf.py  index.rst  preface.md
source/_static/: custom.css
source/ch3_qspi/: index.md  overview.md  registers.md
source/ch4_wifi/: abb.md  ble_sle.md  index.md  mac.md  phy.md  radar.md  rf.md
source/ch6_peripherals/: adc.md  dma.md  gpio.md  i2c.md  i2s.md  index.md  iomux.md  pwm.md  qspi.md  spi.md  tsensor.md  uart.md
